@@ -8,6 +8,16 @@ wallet 0.11 (unreleased)
     integrity.  This also allows us to return a better error message
     naming an object that's still using that ACL.
 
+    Add an audit command to wallet-report and one audit: objects name,
+    which returns all objects that do not pass the local naming policy.
+    The corresponding Wallet::Report method is audit().
+
+    Wallet::Config::verify_name may now be called with an undefined third
+    argument (normally the user attempting to create an object).  This
+    calling convention is used when auditing, and the local policy
+    function should select the correct policy to apply for useful audit
+    results.
+
     Fix portability to older Kerberos libraries without
     krb5_free_error_message.
 
